--- a/core/package.json
+++ b/core/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2",
     "node-cron": "^3.0.2",
