--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
+    "mui-datatables": "^4.3.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
